@@ -3,6 +3,7 @@ Changelog for pdoTools.
 2.7.4 pl
 ==============
 - [#241] [Fenom] Improved the retrieving of TVs for a current resource.
+- [pdoFeth] Restored the checking of possible SQL injections in the &sortby with xPDO 2.5.1.
 
 2.7.3 pl
 ==============
